# Ansede

./: # Ansede v2.0 Architecture & Implem.txt  .ansedeignore  .gitignore  .pre-commit-hooks.yaml  5THMAY_REMAINING_CHECKLIST.md  5thMay.md  Ansede_SAST_Architecture_Blueprint.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FOCUS.md  IFDS_IMPLEMENTATION_SUMMARY.md  LICENSE  P16.md.txt  PRODUCTION_FINALIZATION.md  README.md  ROADMAP-TO-WORLD-BEST.md  ROADMAP.md  SECURITY.md  action.yml  ansede-static.spec  ansede.json  build_exe.py  final_scorecard.json  licencecc.md  production_auth.py  pyproject.toml  suppression_candidates.json  suppression_candidates_web_wild.json  test_ci_locally.py  test_cross_a.py  test_cross_b.py  web_wild_current_postpatch_6seeds.json  web_wild_may11_250.json  web_wild_stress_may12.json
.github/: PULL_REQUEST_TEMPLATE.md
ansede_rust_core/: Cargo.toml  pyproject.toml  test_all_langs.py  test_native.py
benchmarks/: REPRODUCING.md  __init__.py  bench_flat_vs_tree.py  campaign_runbook.md  campaign_targets_top100.example.json  campaign_targets_top100.json  cve_corpus.py  cve_recall_runner.py  dashboard.html  deep_wild_validation.py  disclosure_campaign_ledger.example.json  external_corpus.py  external_manifest.json  final_scorecard.py  head_to_head.py  language_benchmark_deltas.py  language_parity_manifest.json  live_random_repo_sample.py  nvd_benchmark.py  parity_test_runner.py  perf_benchmark.py  perf_dashboard.py  perf_regression_check.py  quality_benchmark.py  quality_corpus.py  real_world_drift_summary_may16.json  real_world_drift_summary_may16.md  real_world_manifest.json  (+5 more)
(+230 files in other folders)
