[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansede-static"
version = "1.1.0"
description = "A Fast, Flow-Sensitive Static Analysis engine for Python and JavaScript."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "security", "sast", "static-analysis", "vulnerability", "linter",
    "code-review", "cwe", "owasp", "injection", "python", "javascript",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
ansede-static = "ansede_static.cli:main"

[project.urls]
Homepage   = "https://github.com/ansede/ansede-static"
Repository = "https://github.com/ansede/ansede-static"
Issues     = "https://github.com/ansede/ansede-static/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ansede_static"]

[tool.pytest.ini_options]
testpaths = ["tests"]
